--- a/package.json
+++ b/package.json
@@ -24,5 +24,14 @@
 		"type": "git",
 		"url": "https://github.com/dilmerv/UnityPackageDependency.git",
 		"revision": "679387cb1fa822190b530bdbb8ea0945f508b5f6"
+	},
+	"scopedRegistries": [
+	{
+		"name": "WebCreek",
+		"url": "https://my.company.com/registry",
+		"scopes": [
+			"com.my-company", "com.my-company.tools.packageX"
+		]
 	}
+	]
 }
